testcases/negative/missing_fn.vcf
BEGIN:VCARD
VERSION:4.0
N:Doe;John;;;
ORG:Example Corp
END:VCARD
